refactor: user module